@@ -2,6 +2,8 @@ LibPST 0.6.33 (2009-xx-xx)
 ===============================
 
     * fix fedora 11 type mismatch warning (actually an error in this case).
+    * fix large file support, some sytems require config.h to be included
+      earlier in the compilation.
 
 LibPST 0.6.32 (2009-03-14)
 ===============================
